Ajuste de css e html

--- a/HTML-CSS/Exercicios/desafios do cap 5/des 10 mini site/android.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 10 mini site/android.html
@@ -16,12 +16,11 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
-            <h2>História do Mascote do Android</h2>  🤖 <br>
+            <h2>História do Mascote do Android</h2>   <br>
 
             <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
 
