Update index Cordel

--- a/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/index.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 12 Cordel/index.html
@@ -103,9 +103,9 @@
 
     <footer>
        Site criado Por  
-       <abbr title="Mestrao mesmo">
-           
-           <a href="https://www.youtube.com/watch?v=WHvP4qAC-YA" target="_blank">Magnilson Moreira
+       <abbr title="GitHub">
+
+           <a href="https://github.com/BMrnice" target="_blank">Magnilson Moreira
 
            </a>
         </abbr>
