--- a/HTML-CSS/Exercicios/ex023/tabela002.html
+++ b/HTML-CSS/Exercicios/ex023/tabela002.html
@@ -37,6 +37,9 @@
             vertical-align: middle;
             
         }
+        tbody > tr:nth-child(2n){
+            background-color: lightgrey;
+        }
         .num{
             text-align: right;
             font-family: bold;
