--- a/HTML-CSS/Exercicios/ex023/tabela004.html
+++ b/HTML-CSS/Exercicios/ex023/tabela004.html
@@ -11,57 +11,63 @@
             width: 150px;
             text-transform: capitalize ;
         }
-        td:nth-child(2n){
-            background-color: lightgray;
+        tbody > tr:nth-child(2n){
+            background-color: rgb(199, 191, 191);
             
         }
     </style>
 </head>
 <body>
     <table>
-        <tr>
-            <th>Grupo</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
-        </tr>
-        <tr>
-            <th rowspan="3">Mulheres</th>
-            <td>Ana Maria</td>
-            <td>Alien</td>
-            <td>Rambo</td>
-            <td>Vingadores</td>
-        </tr>
-        <tr>
-            <td>Beatriz Souza</td>
-            <td>hulk</td>
-            <td>inception</td>
-            <td>Batman</td>
-        </tr>
-        <tr>
-            <td>Claudia Melo</td>
-            <td>oblivion</td>
-            <td>matrix</td>
-            <td>big hero</td>
-        </tr>
-        <tr>
-            <th rowspan="3">homens</th>
-            <td>bruno mendonca</td>
-            <td>intocaveis</td>
-            <td>amnesia</td>
-            <td>gladiador</td>
-        </tr>
-        <tr>
-            <td>daniel lourenco</td>
-            <td>wall-e</td>
-            <td>oldboy</td>
-            <td>dangal</td>
-        </tr>
-        <tr>
-            <td>fabiano mota</td>
-            <td>star wars</td>
-            <td>taxi driver</td>
-            <td>toy story</td>
-        </tr>
-    </table>
-</body>
+        <caption>Filmes Favoritos </caption>
+        <thead> 
+            <tr>
+                <th>Grupo</th>
+                <th>Nomes</th>
+                <th colspan="3">Filmes</th>
+            </tr>
+        </thead>
+        <tbody>
+
+            <tr>
+                <th rowspan="3">Mulheres</th>
+                <td>Ana Maria</td>
+                <td>Alien</td>
+                <td>Rambo</td>
+                <td>Vingadores</td>
+            </tr>
+            <tr>
+                <td>Beatriz Souza</td>
+                <td>hulk</td>
+                <td>inception</td>
+                <td>Batman</td>
+            </tr>
+            <tr>
+                <td>Claudia Melo</td>
+                <td>oblivion</td>
+                <td>matrix</td>
+                <td>big hero</td>
+            </tr>
+            <tr>
+                <th rowspan="3" style="background-color: white;">homens</th>
+                <td>bruno mendonca</td>
+                <td>intocaveis</td>
+                <td>amnesia</td>
+                <td>gladiador</td>
+            </tr>
+            <tr>
+                <td>daniel lourenco</td>
+                <td>wall-e</td>
+                <td>oldboy</td>
+                <td>dangal</td>
+            </tr>
+            <tr>
+                <td>fabiano mota</td>
+                <td>star wars</td>
+                <td>taxi driver</td>
+                <td>toy story</td>
+            </tr>
+        </tbody>
+        </table>
+    </body>
 </html>
