--- a/HTML-CSS/Exercicios/ex023/tabela004.html
+++ b/HTML-CSS/Exercicios/ex023/tabela004.html
@@ -22,15 +22,15 @@
         <caption>Filmes Favoritos </caption>
         <thead> 
             <tr>
-                <th>Grupo</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupo</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
 
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -49,7 +49,7 @@
                 <td>big hero</td>
             </tr>
             <tr>
-                <th rowspan="3" style="background-color: white;">homens</th>
+                <th rowspan="3" style="background-color: white;" scope="rowgroup">homens</th>
                 <td>bruno mendonca</td>
                 <td>intocaveis</td>
                 <td>amnesia</td>
@@ -68,6 +68,12 @@
                 <td>toy story</td>
             </tr>
         </tbody>
+        <tfoot>
+            <th colspan="4" scope="row">
+                total
+            </th>
+            <td>1500</td>
+        </tfoot>
         </table>
     </body>
 </html>
