Start do project
inicio do arranjos do html e css

--- a/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/index.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">k
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    <h1>texte de programa</h1>
+   
+    <main>
+        <section id="telefone">
+            
+        </section>
+
+        <section id="redes-sociais">
+
+        </section>
+    </main>
     
 </body>
 </html>
