--- a/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/index.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/index.html
@@ -12,11 +12,18 @@
    
     <main>
         <section id="telefone">
-            
+            <iframe src="home.html" name="tela" id="tela" frameborder="0" scroll>
+                Seu navegador nao é compativel com esse frame
+            </iframe>
         </section>
 
         <section id="redes-sociais">
-
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="Youtbe"></a><br>
+            <a href="git.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub" ></a><br>
+            <a href="insta.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
+            <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
     
