--- a/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/insta.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/insta.html
@@ -5,22 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            width: 100vw;
-            height: 2200px;
-            background: black url('imagens/tela-instagram.jpg') no-repeat;
-            top: center;
-            background-size: cover;
-            scroll-behavior: auto;
-
-        }
-    </style>
+   <img src="imagens/tela-instagram.jpg" alt="instagram">
+   <a href="#">Acesse</a>
 </body>
 </html>
