--- a/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/youtube.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/youtube.html
@@ -4,22 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Youtube</title>
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            width: 100vw;
-            height: 1200px;
-            background: black url('imagens/tela-youtube.png') no-repeat;
-            top: center;
-            background-size: cover;
-
-        }
-    </style>
+    <img src="imagens/tela-youtube.png" alt="youtube">
+    <a href="https://www.youtube.com.br" target="_blank">Acesse</a>
+           
 </body>
 </html>
