--- a/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/face.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/face.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>FaceBook</title>
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            width: 100vw;
-            height: 2500px;
-            background: black url('imagens/tela-facebook.jpg') no-repeat;
-            top: center;
-            background-size: cover;
-
-        }
-    </style>
+   <img src="imagens/tela-facebook.jpg" alt="face">
+   <a href="#">Acesse</a>
 </body>
 </html>
