--- a/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/home.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 15 Projeto social/home.html
@@ -5,21 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            width: 100vw;
-            height: 100vh;
-            background: black url('imagens/tela-home.jpg') no-repeat;
-            top: center;
-            background-size: cover;
-
-        }
-    </style>
+   <img src="imagens/tela-home.jpg" alt="">
 </body>
 </html>
