--- a/HTML-CSS/Exercicios/ex025/form001.html
+++ b/HTML-CSS/Exercicios/ex025/form001.html
@@ -10,17 +10,28 @@
             font-family: Arial, Helvetica, sans-serif;
             
         }
-        form,h1 {
+        form{
             margin-left: 50%;
             margin-right: 50%;
+        }
+        label {
+            font-weight: bold;
+            text-decoration-line: underline;
+        }
+        header {
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Meu primeiro Formulario</h1>
-    <form action="">
-        <p>Nome: <input type="text" name="nome" id="nome"></p>
-        <p>Sobre nome: <input type="text" name="sobrenome" id="sobrenome"></p>
+    <header>
+        <h1>Meu primeiro Formulario</h1>
+    </header>
+    <form action="cadastro.php"  method="post" autocomplete="off">
+        <p><label for="inome">Nome:</label> 
+            <input type="text" name="nome" id="inome"></p>
+        <p><label for="isobrenome">Sobre nome:</label> 
+            <input type="text" name="sobrenome" id="isobrenome"></p>
         <p><input type="submit" value="Enviar"></p>
     </form>
 </body>
