--- a/HTML-CSS/Exercicios/ex025/form004.html
+++ b/HTML-CSS/Exercicios/ex025/form004.html
@@ -9,15 +9,24 @@
 <body>
     <h1>Exemplo de formulario</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
-        <p>
-            <label for="iemail">E-mail</label>
-            <input type="email" name="email" id="iemail" autocomplete="email">
-        </p>
-        <p>
-            <label for="itel">Telefone</label>
-            <input type="tel" name="tel" id="itel" autocomplete="tel"
-            pattern="^[0-9]{4}-[0-9]{4}$" required>
-        </p>
+        <fieldset>
+            <legend>Dados Pessoais</legend>
+            <p>
+                <label for="iname">Nome</label>
+                <input type="text" name="nome" id="iname" minlength="8" maxlength="25" required placeholder="Nome completo">
+            </p>
+            <p>
+                <label for="iemail">E-mail</label>
+                <input type="email" name="email" id="iemail" autocomplete="email" placeholder="contato@provedor.com">
+            </p>
+            <p>
+                <label for="itel">Telefone</label>
+                <input type="tel" name="tel" id="itel" autocomplete="tel"
+                pattern="^\(\d{2}\)\d{4,5}-\d{4}$" required placeholder="(xx)xxxxx-xxxx">
+                <!--Espressoes regulares RegEx-->
+                <!--amuita atencao ao digitar esse padroes -->
+            </p>
+        </fieldset>
         <p>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
