--- a/HTML-CSS/Exercicios/ex025/form006.html
+++ b/HTML-CSS/Exercicios/ex025/form006.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Exemplo de Formulário com cores</h1>
-    <form action="cadastro.php">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="icor">COR:</label>
             <input type="color" name="cor" id="icor" value="#ffffff">
@@ -16,6 +16,11 @@
         <p>
             <label for="inivel">Nivel de satisfaction</label>
             <input type="range" name="nivel" id="inivel">
+        </p>
+        <p>
+            <label for="foto">Foto de perfil</label>
+            <input type="file" name="foto" id="ifoto">
+            <!--Ao usae esse input deve tbm usar o method="post"-->>
         </p>
         <p>
             <input type="submit" value="envia">
