--- a/HTML-CSS/Exercicios/ex026/mq002/index.html
+++ b/HTML-CSS/Exercicios/ex026/mq002/index.html
@@ -11,6 +11,6 @@
     <title>Media query</title>
 </head>
 <body>
-    <h1>Mude a orientacao do seu celular</h1>
+    <h1>Mude a orientação do seu dispositivo</h1>
 </body>
 </html>
