ajuste de Figure

--- a/HTML-CSS/Exercicios/ex026/mq005/index.html
+++ b/HTML-CSS/Exercicios/ex026/mq005/index.html
@@ -60,11 +60,11 @@
             <p>
                 Atenta às transformações da mobilidade, o iFood firmou parceria com a Voltz para disponibilizar a moto elétrica Voltz EVS Work iFood, uma versão feita com exclusividade para os entregadores cadastrados no app de delivery. Segundo as empresas, a troca da moto a combustão pela elétrica pode representar uma economia de 60% para os entregadores, considerando as despesas com combustível.
             </p>
-            <i class="img-car">
-                <img src="https://img.ibxk.com.br/2022/08/29/carro-eletricos-29131155562287.jpg?ims=504x320" alt="base de carregamento de carro" srcset="">
-                <p>O crescimento da frota mundial de carros elétricos esbarra no baixo estoque disponibilizado pelas montadoras.</p>
+            <figure class="img-car">
+                <img src="https://img.ibxk.com.br/2022/08/29/carro-eletricos-29131155562287.jpg?ims=504x320" alt="base de carregamento de carro">
+                <figcaption>O crescimento da frota mundial de carros elétricos esbarra no baixo estoque disponibilizado pelas montadoras.</figcaption>
                 
-            </i>
+            </figure>
             <p>
                 Apesar de tímidos, alguns estímulos do setor público podem impulsionar ainda mais o setor. Em maio deste ano, o Projeto de Lei (PL) que cria política de incentivo tributário à pesquisa de desenvolvimento da mobilidade elétrica no Brasil, foi aprovado pela Comissão de Ciência e Tecnologia do Senado. Vale destacar que, entre a proposta do PL, está a determinação de que as empresas beneficiadas por renúncias fiscais no programa de inovação Rota 2030 — Mobilidade e Logística, deverão aplicar 1,5% do benefício tributário em pesquisas sobre o desenvolvimento da tecnologia para veículos elétricos. Sem dúvida, esse é um investimento no futuro.
             </p>
