--- a/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/index.html
+++ b/HTML-CSS/Exercicios/desafios do cap 5/des 16 projeto login/index.html
@@ -19,7 +19,7 @@
             </div>
                 <div id="form">
                     <h1>Login</h1>
-                    <p>Seja Bem-vindo novamente. Faça logina para acessar sua area de trabalho !</p>
+                    <p>Seja Bem-vindo novamente. Faça login para acessar sua area de trabalho !</p>
                     <form action="login.php" method="post">
                         <div class="campo">
                             <i class="material-icons">person</i>
